fix(Platform): Console overflow

--- a/src/components/platform/Console.scss
+++ b/src/components/platform/Console.scss
@@ -15,6 +15,7 @@
   transform: translateX(-100%);
   border-right: 0.0625rem solid $color-ui-light-0;
   background-color: $color-ui-light-1;
+  overflow: auto;
   z-index: $z-index-platform - 1;
 }
 
